Task: Continuing to work on signin and registration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   app:
-    build: ./app
+    build: Login/LoginApp
     container_name: "Flask_App2"
     links:
       - db
