--- a/Login/LoginApp/Dockerfile
+++ b/Login/LoginApp/Dockerfile
@@ -2,11 +2,11 @@ FROM python:3.8
 
 EXPOSE 5000
 
-WORKDIR /app
+WORKDIR /LoginApp
 
-COPY requirements.txt /app
+COPY requirements.txt /LoginApp
 RUN pip install  -r requirements.txt --upgrade pip
 
-COPY . /app
+COPY . /LoginApp
 
 CMD python app.py
