--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   app:
-    build: Login/LoginApp
+    build: FinalProject
     container_name: "Flask_App2"
     links:
       - db
